; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_utils.c_normalize_utf8_path.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_utils.c_normalize_utf8_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@G_NORMALIZE_NFC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @normalize_utf8_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @g_utf8_validate(i8* %4, i32 -1, i32* null)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %12

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* @G_NORMALIZE_NFC, align 4
  %11 = call i8* @g_utf8_normalize(i8* %9, i32 -1, i32 %10)
  store i8* %11, i8** %2, align 8
  br label %12

12:                                               ; preds = %8, %7
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i32 @g_utf8_validate(i8*, i32, i32*) #1

declare dso_local i8* @g_utf8_normalize(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
